# OpenFOAM-Multi-Objective-Optimization

./: .gitignore  Allclean  Example_feature_importance.html  README.md  bashrc.smartredis  config.yaml  core.py  dashboard.py  docs-redis.md  docs.md  foamBO.py  foamDash.py  getSLURMJOBStatus.sh  multiObjOpt.py  paramVariation.py  postProcessOpt.py  pyproject.toml  redis-db.py  requirements.txt  stopdb.py
3DdamBreak/: Allclean  Allrun  computeRMSPressure.py  computeRMSWaterHeight.py  height_experiment.csv  pressure_experiment.csv  probePoints.csv
3DdamBreak/constant/: dynamicMeshDict
3DdamBreak/geometry/: domain.scad
3DdamBreak/system/: controlDict  decomposeParDict  fvSolution  meshDict  probes.cfg  setFieldsDict  waterHeight.cfg
docs/: 00-implementation.md  01-single-objective.md  02-multi-objective.md  README.md
examples/api/: dim_reduction.py  multi_objective.py  single_objective.py
examples/benchmarks/: benchmark.py
examples/local/multi-objective/: README.md  config.yaml
examples/local/multi-objective/pitzDaily/: Allclean  Allrun  Allrun.slurm
examples/local/multi-objective/pitzDaily/0orig/: U
examples/local/multi-objective/pitzDaily/system/: controlDict
examples/local/parameter-study/: config.yaml
examples/local/parameter-study/originalCase/: .~lock.ehe.csv#  Allclean  Allrun  trial.py
examples/local/parameter-study/originalCase/0.orig/: CAir  CWater  PhiAir  PhiWater  U  pd  theta0WaterAir
examples/local/parameter-study/originalCase/constant/: cellDecomposition  dynamicMeshDict  g  interfaceProperties  phaseFieldProperties  rotationalMRFZones  translationalMRFZones  transportProperties  turbulenceProperties
examples/local/parameter-study/originalCase/constant/polyMesh/: blockMeshDict
examples/local/parameter-study/originalCase/system/: controlDict  decomposeParDict  funkySetBoundaryDict  funkySetFieldsDict.Air  funkySetFieldsDict.Water  fvSchemes  fvSolution  sampleDict
examples/local/single-objective/: README.md  config.yaml
examples/local/single-objective/case/: FxDict  ax_tutorial.py  benchmark.py
examples/multi-objective/: MOO.yaml
examples/multi-objective/apptainer/: container.yaml  openfoam-paraview.def
examples/multi-objective/cavity/: Allrun  movingWallBCDict
examples/multi-objective/cavity/0.orig/: U  p
examples/multi-objective/cavity/constant/: transportProperties  turbulenceProperties
examples/multi-objective/cavity/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
examples/multi-objective/scripts/: metric.sh  pv_vorticity.py  run_on_cluster.sh  state_on_cluster.sh
examples/single-objective/: SOM.yaml  benchmark.py  run_as_lib.py
examples/single-objective/artifacts/: MultiObjF1F3_config.yaml
examples/single-objective/case/: FxDict
examples/slurm/: README.md
examples/slurm/shape-optimization/: config-dependent.yaml  config.yaml
examples/slurm/shape-optimization/pitzDaily/: Allrun  Allrun.slurm  getPressDiff.sh
examples/slurm/shape-optimization/pitzDaily-dependent/: Allrun
examples/slurm/shape-optimization/pitzDaily/system/: pressureDifferencePatch
pitzDaily/: Allrun  Allrun.slurm  getImage.sh  getPressDiff.sh  patches.py  patches.py.bk  pressureDiff.py  renderResults.py
pitzDaily/0orig/: epsilon
pitzDaily/constant/: transportProperties
pitzDaily/openscad/: pitzDaily.scad
pitzDaily/system/: controlDict  geometryDict  surfaceSubsetDict  totalPressureIncompressible
smartSimFunctionObject/: smartSimFunctionObject.C  smartSimFunctionObject.H
smartSimFunctionObject/Make/: options
src/foambo/: __init__.py  _version.py  analysis.py  api.py  api_server.py  archive.py  bootstrap.py  common.py  config.py  config_upgrade.py  constraints.py  core.py  default_config.py  docs.py  docs_concepts.py  feature_report.py  foamBO.py  foamDash.py  foamValidate.py  metrics.py  optimize.py  orchestrate.py  preflight.py  robustness.py  visualize.py
src/foambo/templates/: config_builder.css  config_builder.html  config_builder.js  dashboard.css  dashboard.html  dashboard.js  foamBOStreamMetricsDict  visualizer.html
