[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foambo"
version = "1.1.3"
authors = [
  { name="Mohammed Elwardi Fadeli", email="elwardifadeli@gmail.com" },
]
description = "Configuration-based Multi-objective Bayesian Optimization on OpenFOAM cases with Ax-platform"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Environment :: GPU",
    "Framework :: Dash",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ax-platform==1.1.2",
    "omegaconf>=2.3.0",
    "regex>=2023.6.3",
    "dash>=2.11.1",
    "dash_bootstrap_components>=1.4.2",
    "foamlib>=1.3.10",
    "kaleido>=0.2.1",
    "colorlog>=6.9.0",
    "tabulate>=0.9.0",
    "nbformat>=5.10.4",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.51",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "pyvista>=0.46.3",
]

[project.scripts]
    foamBO = "foambo.optimize:main"

[project.urls]
"Homepage" = "https://github.com/FoamScience/OpenFOAM-Multi-Objective-Optimization"
"Bug Tracker" = "https://github.com/FoamScience/OpenFOAM-Multi-Objective-Optimization/issues"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.4.1",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
exclude = [
    "examples/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples/",
]
